--- a/_scss/_components-header.scss
+++ b/_scss/_components-header.scss
@@ -28,6 +28,10 @@
     position: relative;
     text-transform: uppercase;
 
+    a {
+        border: 0;
+    }
+
     @include media-query(hd) {
         font-size: $font-size-s;
         grid-area: name;
