--- a/_scss/_theme-base.scss
+++ b/_scss/_theme-base.scss
@@ -73,7 +73,7 @@
         border-color: $theme-bg-bright-1;
     }
 
-    .c-name,
+    .c-name a,
     .c-menu_button {
         color: $theme-bg-bright-1;
     }
@@ -125,7 +125,7 @@
         border-color: $theme-bg-bright-2;
     }
 
-    .c-name,
+    .c-name a,
     .c-menu_button {
         color: $theme-bg-bright-2;
     }
@@ -177,7 +177,7 @@
         border-color: $theme-bg-bright-3;
     }
 
-    .c-name,
+    .c-name a,
     .c-menu_button {
         color: $theme-bg-bright-3;
     }
@@ -228,7 +228,7 @@
         border-color: $theme-bg-bright-4;
     }
 
-    .c-name,
+    .c-name a,
     .c-menu_button {
         color: $theme-bg-bright-4;
     }
@@ -280,7 +280,7 @@
         border-color: $theme-bg-bright-5;
     }
 
-    .c-name,
+    .c-name a,
     .c-menu_button {
         color: $theme-bg-bright-5;
     }
